# LaRuche

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_FR.md  ROADMAP.md  debug_env.bat  docker-compose.yml  laruche-state.json  setup.sh  test.md
.agents/workflows/: install_debian.md
.claude/: settings.local.json
.github/workflows/: ci.yml
laruche-channels/src/: discord_bot.py  slack_bot.py  telegram.py
laruche-cli/: Cargo.toml
laruche-cli/src/: main.rs  tui.rs
laruche-client/: Cargo.toml
laruche-client/src/: lib.rs
laruche-dashboard/: Cargo.toml
laruche-dashboard/src/: lib.rs  main.rs
laruche-dashboard/src/templates/: chatbot.html  dashboard.html  spa.html
laruche-essaim/: Cargo.toml
laruche-essaim/src/: abeille.rs  brain.rs  cron.rs  lib.rs  prompt.rs  providers.rs  rag.rs  session.rs  streaming.rs
laruche-essaim/src/abeilles/: browser.rs  calendrier.rs  delegation.rs  essaim_status.rs  fichiers.rs  file_watch.rs  git.rs  knowledge.rs  math.rs  mod.rs  plugins.rs  recherche_fichiers.rs  shell.rs  web_deep.rs  web_fetch.rs  web_recherche.rs
laruche-essaim/tests/: test_tools.rs
laruche-node/: Cargo.toml
laruche-node/src/: auth_user.rs  main.rs  mcp.rs  profiles.rs  sync.rs  systray.rs  tui.rs
laruche-voix/: pyproject.toml
laruche-voix/src/: miel_announce.py  stt_service.py  tts_service.py
laruche-vscode/: README.md  __check_syntax.js  __check_syntax2.js  __resolved_script.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
laruche-vscode/src/: agentProvider.ts  chatView.ts  client.ts  discovery.ts  extension.ts
miel-protocol/: Cargo.toml
miel-protocol/src/: capabilities.rs  discovery.rs  error.rs  lib.rs  manifest.rs  qos.rs
plugins/: example_hello.json
scripts/: install-service.ps1  install-service.sh
sessions/: 6109c00e-feb1-42b0-8467-3391360630cf.jsonl  835b6172-4d3d-4181-a23a-2ff0c4dd55b2.json  f99d3655-0970-4c81-8da3-a95c4cfb9527.json
