[package]
name = "laruche-dashboard"
version.workspace = true
edition.workspace = true
description = "LaRuche Dashboard - Web UI for monitoring and managing LaRuche nodes"

[[bin]]
name = "laruche-dashboard"
path = "src/main.rs"

[dependencies]
land-protocol.workspace = true
laruche-client = { path = "../laruche-client" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
