[package]
name = "laruche-essaim"
version.workspace = true
edition.workspace = true
description = "Essaim - Agent engine for LaRuche (ReAct loop, tools, sessions)"

[dependencies]
miel-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait = "0.1"
futures-util = "0.3"
tokio-stream = "0.1"
hostname = "0.4"
urlencoding = "2"
which = "7"
